Name          : happstack-clientsession
Version       : 7.0.0
License       : BSD3
Cabal-Version : >= 1.9.2
Build-Type    : Simple

Library
  GHC-Options     : -Wall
  Hs-Source-Dirs  : src
  Exposed-Modules :
    Happstack.Server.ClientSession
  Build-Depends   :
    base             == 4.*,
    bytestring       == 0.9.*,
    cereal           == 0.3.*,
    clientsession    == 0.7.*,
    happstack-server == 7.0.*,
    mtl              == 2.0.*,
    safecopy         == 0.6.*
