Name          : happstack-clientsession
Version       : 7.3.1.2
License       : BSD3
License-file  : COPYING
Synopsis      : client-side session data
Description   : uses the clientsession library to store session data in an HTTP cookie
Author        : Dag Odenhall
Maintainer    : Happstack team <happs@googlegroups.com>
Homepage      : http://happstack.com
Cabal-Version : >= 1.6
Category      : Web, Happstack
Build-Type    : Simple
tested-with   : GHC==8.0.1, GHC==8.2.2, GHC==8.4.1, GHC==8.6.5, GHC==8.8.1
extra-source-files:  README.md

source-repository head
    type:     git
    location: https://github.com/Happstack/happstack-clientsession

Library
  GHC-Options     : -Wall
  Hs-Source-Dirs  : src
  Exposed-Modules :
    Happstack.Server.ClientSession
  Build-Depends   :
    base              == 4.*,
    bytestring        >= 0.9 && < 0.11,
    cereal            >= 0.3 && < 0.6,
    clientsession     >= 0.8 && < 0.10,
    happstack-server  >= 7.0 && < 7.7,
    monad-control     >= 1.0 && < 1.1,
    mtl               >= 2.0 && < 2.3,
    safecopy          >= 0.7 && < 0.11,
    transformers-base == 0.4.*
