Name:                happstack-clientsession-demo
Version:             0.1
Synopsis:            a demonstration of using happstack-clientsession
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          jeremy@n-heptane.com
Copyright:           2012 Jeremy Shaw
Category:            Web, Happstack
Build-type:          Simple
Cabal-version:       >=1.2


Executable happstack-clientsession-demo
     Main-is:        demo.hs
     Build-depends:  base                    >= 4 &&  <5,
                     blaze-html              == 0.4.*,
                     clientsession           == 0.7.*,
                     data-lens-fd            == 2.0.*,
                     data-lens-template      == 2.1.*,
                     happstack-server        == 7.0.*,
                     happstack-clientsession,
                     mtl                     >= 2 && < 2.2,
                     safecopy                == 0.6.*,
                     text                    == 0.11.*
